First round application

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+coverage.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -73,4 +74,3 @@ Sessionx.vim
 tags
 # Persistent undo
 [._]*.un~
-
